--- a/res/layout/user_contact_dialog_box.xml
+++ b/res/layout/user_contact_dialog_box.xml
@@ -4,28 +4,28 @@
     android:orientation="vertical" >
          
     <Button
-        android:id="@+id/makeCall2"
+        android:id="@+id/userPhoneCall"
         android:layout_width="match_parent"
         android:background="@drawable/drawable"
         android:layout_height="wrap_content"
         android:text="@string/phone_call" />
     
     <Button
-        android:id="@+id/sendSms2"
+        android:id="@+id/userSendSMS"
         android:layout_width="match_parent"
         android:background="@drawable/drawable"
         android:layout_height="wrap_content"
         android:text="@string/sms" />
     
     <Button
-        android:id="@+id/sendEmail"
+        android:id="@+id/userSendEmail"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/drawable"
         android:text="@string/email_to" />
     
     <Button
-        android:id="@+id/cancel2"
+        android:id="@+id/userCancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/drawable"
