--- a/res/layout/kin_contact_dialog_box.xml
+++ b/res/layout/kin_contact_dialog_box.xml
@@ -8,19 +8,19 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/drawable"
-        android:text="Phone Call" />
+        android:text="@string/phone_call" />
 
     <Button
         android:id="@+id/kin_Send_SMS"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/drawable"
-        android:text="Send SMS" />
+        android:text="@string/sms" />
 
     <Button
         android:id="@+id/kin_Cancel"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/drawable"
-        android:text="Cancel" />
+        android:text="@string/cancel" />
 </LinearLayout>
