--- a/app/src/main/res/layout/anti_d_dialog.xml
+++ b/app/src/main/res/layout/anti_d_dialog.xml
@@ -5,17 +5,30 @@
     android:layout_height="wrap_content"
     android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/tv_anti_d_dialog_title"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:paddingLeft="-48dp"
-        android:padding="@dimen/padding_small"
-        android:textSize="@dimen/text_Xsmall"
-        android:gravity="center_horizontal"
-        android:background="@color/clinical_blue"
-        android:text="SMART"
-        android:textColor="@color/white" />
+        android:layout_height="match_parent">
+
+        <TextView
+            android:id="@+id/tv_anti_d_dialog_title"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/clinical_blue"
+            android:gravity="center_horizontal"
+            android:padding="@dimen/padding_small"
+            android:paddingLeft="-48dp"
+            android:text="SMART"
+            android:textColor="@color/white"
+            android:textSize="@dimen/text_Xsmall"/>
+
+        <ImageView
+            android:id="@+id/iv_exit_dialog"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:padding="@dimen/padding_small"
+            android:src="@drawable/ic_close"/>
+    </RelativeLayout>
 
     <ListView
         android:id="@+id/lv_anti_d"
