--- a/app/src/main/res/layout/activity_clinic_time_record.xml
+++ b/app/src/main/res/layout/activity_clinic_time_record.xml
@@ -1,4 +1,5 @@
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -8,41 +9,41 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/select_clinic"
+        android:text="@string/clinics_not_started"
         android:textSize="@dimen/text_medium"
-        android:textStyle="bold" />
+        android:textStyle="bold"/>
 
     <ListView
-        android:id="@+id/lv_time_record_clinics"
+        android:id="@+id/lv_clinics_not_started"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:listSelector="@color/teal"/>
 
-    <LinearLayout
+    <Button
+        android:id="@+id/btn_start_clinic"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal" >
+        android:text="@string/start_clinic"
+        android:theme="@style/CallToActionButton"/>
 
-        <Button
-            android:id="@+id/btn_check_in"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/start_clinic"
-            android:theme="@style/CallToActionButton"/>
-
-        <!--<Button
-            android:id="@+id/btn_check_out"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:text="@string/stop_clinic"
-            android:layout_weight="1.0"
-            android:theme="@style/CallToActionButton"/>-->
-    </LinearLayout>
-
-    <!--<EditText
-        android:id="@+id/et_record_id"
+    <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:hint="Enter Record Id Here"/>-->
+        android:text="@string/clinics_not_started"
+        android:textSize="@dimen/text_medium"
+        android:textStyle="bold"/>
+
+    <ListView
+        android:id="@+id/lv_clinics_started"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:listSelector="@color/teal"/>
+
+    <Button
+        android:id="@+id/btn_stop_clinic"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/stop_clinic"
+        android:theme="@style/CallToActionButton"/>
 
 </LinearLayout>
