--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -20,6 +20,14 @@
        <item name="android:paddingBottom">@dimen/padding_small</item>
     </style>
 
+    <style name="DisableCTA" >
+        <item name="colorButtonNormal">@color/light_grey</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textSize">@dimen/text_medium</item>
+        <item name="android:paddingTop">@dimen/padding_small</item>
+        <item name="android:paddingBottom">@dimen/padding_small</item>
+    </style>
+
     <style name="SecondaryButton">
         <item name="colorButtonNormal">@color/teal</item>
         <item name="android:textColor">@color/black</item>
